--- a/azure-pipelines/templates/prepare-mirror-agent.yaml
+++ b/azure-pipelines/templates/prepare-mirror-agent.yaml
@@ -34,4 +34,7 @@ steps:
       sudo apt-get update
       sudo apt-get install -y nfs-common
     fi
+    if ! which az; then
+      curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+    fi
   displayName: 'Run prepare mirror agent script'
