--- a/azure-pipelines/templates/publish-mirror.yaml
+++ b/azure-pipelines/templates/publish-mirror.yaml
@@ -19,6 +19,7 @@ steps:
     MIRROR_PUBLISHED=n
     [ -e "$PUBLIS_FLAG" ] && $MIRROR_PUBLISHED=y
     echo "##vso[task.setvariable variable=MIRROR_PUBLISHED;isOutput=true]$MIRROR_PUBLISHED"
+  name: publishMirrorBash
   env:
     PASSPHRASE: $(sonic-gpg-passphrase)
     UPDATE_MIRROR: ${{ parameters.updateMirror }}
