Update publish-debian-mirror-buster-nfs.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
@@ -53,7 +53,7 @@ stages:
     - template: ../templates/migrate-cdn-replica.yaml
       parameters:
         cdnReplicaOriginPriority: '3'
-- stage: PublishBusterToUSEast
+- stage: PublishBusterToUSEastReplica
   jobs:
   - job: Test
     steps:
