Update publish-debian-mirror-buster-nfs.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
@@ -15,7 +15,7 @@ variables:
 - name: EnableNfs
   value: 'y'
 - name: Timestamp
-  value: $(Date:yyyyMMdd-HHmmss)
+  value: $(Date:yyyyMMdd)
 stages:
 - stage: PublishBusterToUSEast
   jobs:
