--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
@@ -7,7 +7,6 @@ trigger:
 - main
 
 pool: sonic-mirror-build-2
-
 variables:
 - group: Debian-Mirror-GPG-VG
 - group: Debian-Mirror-Storage-US-East-2
@@ -15,7 +14,20 @@ variables:
 - name: EnableNfs
   value: 'y'
 stages:
-- stage: PublishBusterToUSEast
+- stage: InitStage
+  jobs:
+  - job: InitJob
+    steps:
+    - template: ../templates/check-cdn-status.yaml
+    - bash: |
+        MIRROR_VERSION=$(date +%Y%m%d%H%M%S-%N)
+        echo "##vso[task.setvariable variable=MIRROR_VERSION;isOutput=true]$MIRROR_VERSION"
+      name: InitStep
+- stage: PublishToReplicaStage
+  dependsOn: InitStage
+  variables:
+  - name: MIRROR_VERSION
+    value: $[ stageDependencies.InitStage.InitJob.outputs['InitStep.MIRROR_VERSION'] ]
   jobs:
   - job: PublishBusterToUSEastReplica
     timeoutInMinutes: 0
@@ -24,10 +36,32 @@ stages:
     - name: PublishToReplica
       value: 'y'
     steps:
-    - template: ../templates/check-cdn-status.yaml
-    - template: ../templates/publish-mirror.yaml
-      parameters:
-        updateMirror: 'y'
+    - bash: |
+        echo "MIRROR_VERSION=$MIRROR_VERSION"
+    #- template: ../templates/publish-mirror.yaml
+    #  parameters:
+    #    updateMirror: 'y'
+- stage: MigrateReplicaStage
+  dependsOn:
+  - InitStage
+  - PublishToReplicaStage
+  variables:
+  - name: MIRROR_VERSION
+    value: $[ stageDependencies.InitStage.InitJob.outputs['InitStep.MIRROR_VERSION'] ]
+  jobs:
+  - job: Test
+    steps:
+    - bash: |
+        echo "MIRROR_VERSION=$MIRROR_VERSION"
+      displayName: 'Test'
+- stage: PublishToPrimaryStage
+  dependsOn:
+  - InitStage
+  - MigrateReplicaStage
+  variables:
+  - name: MIRROR_VERSION
+    value: $[ stageDependencies.InitStage.InitJob.outputs['InitStep.MIRROR_VERSION'] ]
+  jobs:
   - job: PublishBusterToUSEast
     timeoutInMinutes: 0
     dependsOn: PublishBusterToUSEastReplica
@@ -39,19 +73,17 @@ stages:
     - name: CreateDB
       value: 'n'
     steps:
-    - template: ../templates/migrate-cdn-replica.yaml
-      parameters:
-        cdnReplicaOriginPriority: '1'
-    - template: ../templates/publish-mirror.yaml
-      parameters:
-        updateMirror: 'n'
-    - template: ../templates/migrate-cdn-replica.yaml
-      parameters:
-        cdnReplicaOriginPriority: '3'
-- stage: PublishBusterToUSEastReplica
+    - bash: |
+        echo "MIRROR_VERSION=$MIRROR_VERSION"
+- stage: MigratePrimaryStage
+  dependsOn:
+  - InitStage
+  - PublishToPrimaryStage
+  variables:
+  - name: MIRROR_VERSION
+    value: $[ stageDependencies.InitStage.InitJob.outputs['InitStep.MIRROR_VERSION'] ]
   jobs:
   - job: Test
     steps:
     - bash: |
-        echo test
-      displayName: 'Test'
+        echo "MIRROR_VERSION=$MIRROR_VERSION"
