Update publish-debian-mirror-buster-nfs.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
@@ -29,6 +29,7 @@ stages:
   - name: MIRROR_VERSION
     value: $[ stageDependencies.InitStage.InitJob.outputs['InitStep.MIRROR_VERSION'] ]
   jobs:
+  - template: ../templates/publish-mirrors.yml
   - job: PublishBusterToUSEastReplica
     timeoutInMinutes: 0
     variables:
