--- a/azure-pipelines/templates/publish-mirrors.yml
+++ b/azure-pipelines/templates/publish-mirrors.yml
@@ -22,7 +22,7 @@ jobs:
   - ${{ each pair in parameters.publishjob }}:
       ${{ if and(ne(pair.key, 'steps'), ne(pair.key, 'job')) }}:
         ${{ pair.key }}: ${{ pair.value }}
-    job: ${{ format('Publish mirror {0}', mirrorName) }}
+    job: ${{ format('Publish_mirror_{0}', mirrorName) }}
     steps:
     - bash: |
         echo "pre-step"
