--- a/azure-pipelines/templates/publish-mirror.yaml
+++ b/azure-pipelines/templates/publish-mirror.yaml
@@ -15,7 +15,7 @@ steps:
     enableNfs: $(EnableNfs)
 - bash: |
     echo "$(sonic-gpg-enc-private-key)" > "encrypted_private_key.gpg"
-    scripts/mirror/aptly.sh "$(CreateDB)" "$(Mirror_Name)" "$(Mirror_URL)" "$(Mirror_Distributions)" "$(Mirror_Architectures)" "$(Mirror_Components)" "$(MIRROR_FILESYSTEM)"
+    azure-pipelines/mirror/aptly.sh "$(CreateDB)" "$(Mirror_Name)" "$(Mirror_URL)" "$(Mirror_Distributions)" "$(Mirror_Architectures)" "$(Mirror_Components)" "$(MIRROR_FILESYSTEM)"
     MIRROR_PUBLISHED=n
     [ -e "$PUBLIS_FLAG" ] && $MIRROR_PUBLISHED=y
     echo "##vso[task.setvariable variable=MIRROR_PUBLISHED;isOutput=true]$MIRROR_PUBLISHED"
