--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
@@ -18,7 +18,7 @@ stages:
   jobs:
   - job: InitJob
     steps:
-    - template: ../templates/check-cdn-status.yaml
+    - template: ../templates/debian-mirror-init.yml
     - bash: |
         MIRROR_VERSION=$(date +%Y%m%d%H%M%S-%N)
         echo "##vso[task.setvariable variable=MIRROR_VERSION;isOutput=true]$MIRROR_VERSION"
