Update publish-debian-mirror-buster-nfs.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
@@ -92,7 +92,7 @@ stages:
 - stage: CleanUp
   condition: always()
   jobs:
-  - job: Test
+  - job: CleanUp
     steps:
     - bash: |
-        echo "Clean up"
+        rm -r work/_data/.lockdir
