--- a/azure-pipelines/templates/debian-mirror-init.yml
+++ b/azure-pipelines/templates/debian-mirror-init.yml
@@ -3,6 +3,9 @@ steps:
 - template: ../templates/debian-mirror-init-storage.yml
 - bash: |
     set -e
+    APTLY_LOCK_PATH=work/_data/.lockdir
+    mkdir $APTLY_LOCK_PATH
+    touch $APTLY_LOCK_PATH/.lockfile
   displayName: 'Set lock file'
 - bash: |
     set -e
