Update publish-debian-mirror-buster-nfs.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
@@ -95,4 +95,4 @@ stages:
   - job: CleanUp
     steps:
     - bash: |
-        rm -rf work/_aptly/.lockdir
+        [ -d work/_aptly/.lockdir ] && rm -rf work/_aptly/.lockdir
