Update publish-debian-mirror-buster-nfs.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-buster-nfs.yml
@@ -96,3 +96,4 @@ stages:
     steps:
     - bash: |
         [ -d work/_aptly/.lockdir ] && rm -rf work/_aptly/.lockdir
+      displayName: 'CleanUp'
