--- a/azure-pipelines/templates/debian-mirror-init-storage.yml
+++ b/azure-pipelines/templates/debian-mirror-init-storage.yml
@@ -114,4 +114,4 @@ steps:
     StorageAccountReplica: $(StorageAccountReplica)
     StorageAccountReplicaSasToken: $(StorageAccountReplicaSasToken)
     
-  displayName: 'Run mount stroage container to publish mirror script'
+  displayName: 'Mount stroage container to publish mirror script'
