--- a/azure-pipelines/templates/debian-mirror-publish-mirrors-internal.yml
+++ b/azure-pipelines/templates/debian-mirror-publish-mirrors-internal.yml
@@ -9,14 +9,6 @@ parameters:
   default:
     job:
     steps:
-    - bash: |
-        echo "test"
-      name: 'test'
-      displayName: 'Test'
-    - bash: |
-        echo "test1"
-      name: 'test1'
-      displayName: 'Test1'
 jobs:
 - ${{ each mirrorName in parameters.mirrorNames }}:
   - ${{ each pair in parameters.publishjob }}:
@@ -28,6 +20,15 @@ jobs:
         echo "pre-step"
       displayName: 'pre-step'
     - ${{ parameters.publishjob.steps }}
+    - bash: |
+        set -e
+        azure-pipelines/scripts/mirror/publish.sh "$(CreateDB)" "${{ mirrorName }}"
+      name: publishMirrorBash
+      env:
+        PASSPHRASE: $(sonic-gpg-passphrase)
+        GPG_KEY: $(sonic-gpg-enc-private-key)
+        UPDATE_MIRROR: $(UpdateMirror)
+        MIRROR_VERSION: $(MirrorVersion)
     - bash: |
         echo "post-step"
       displayName: 'post-step'
