--- a/azure-pipelines/templates/debian-mirror-publish-mirrors-internal.yml
+++ b/azure-pipelines/templates/debian-mirror-publish-mirrors-internal.yml
@@ -16,7 +16,7 @@ jobs:
   - ${{ each pair in parameters.publishjob }}:
       ${{ if and(ne(pair.key, 'steps'), ne(pair.key, 'job')) }}:
         ${{ pair.key }}: ${{ pair.value }}
-    job: ${{ format('Publish_mirror_{0}', mirrorName) }}
+    job: ${{ format('Publish_mirror_{0}', replace(mirrorName, '-', '_')) }}
     steps:
     - template: ../templates/debian-mirror-init-agent.yml
     - template: ../templates/debian-mirror-init-storage.yml
