--- a/azure-pipelines/templates/debian-mirror-migrate-replica.yml
+++ b/azure-pipelines/templates/debian-mirror-migrate-replica.yml
@@ -13,10 +13,12 @@ steps:
     db_version=none
     publish_version=
     [ -f work/publish/version ] && publish_version=$(cat work/publish/version)
-    [ -f work/_aptly/version ] && publish_version=$(cat work/_aptly/version)
+    [ -f work/_aptly/version ] && db_version=$(cat work/_aptly/version)
     migrate_cdn_replica=y
     echo "The version info: db_version=$db_version, publish_version=$publish_version"
     [ "$db_version" == "$publish_version" ] && migrate_cdn_replica=n
+    # The variable is set for both the current job and the depended jobs
+    echo "##vso[task.setvariable variable=MigrateCdnReplica]$migrate_cdn_replica"
     echo "##vso[task.setvariable variable=MigrateCdnReplica;isOutput=true]$migrate_cdn_replica"
   name: CheckVersion
   displayName: 'Check the publish version'
