--- a/azure-pipelines/templates/debian-mirror-init-storage.yml
+++ b/azure-pipelines/templates/debian-mirror-init-storage.yml
@@ -65,15 +65,15 @@ steps:
     fi
 
     mkdir -p "$WORKSPACE"
-    APTLY_PATH=$WORKSPACE/aptly
+    STORAGE_DATA_PATH=$WORKSPACE/_storage_data
     APTLY_POOL_PATH=$WORKSPACE/pool
     BLOBFUSE_MIRROR_APTLY=$BLOBFUSE_APTLY_DATA/aptly
     BLOBFUSE_MIRROR_PATH=$BLOBFUSE_APTLY_DATA/aptly/$MIRROR_NAME
     [ "$EnableNFS" == "y" ] && BLOBFUSE_MIRROR_PATH=$BLOBFUSE_APTLY_DATA/$MIRROR_NAME/nfs
-    echo "APTLY_PATH=$APTLY_PATH, APTLY_POOL_PATH=$APTLY_POOL_PATH"
+    echo "STORAGE_DATA_PATH=$STORAGE_DATA_PATH, APTLY_POOL_PATH=$APTLY_POOL_PATH"
     mkdir -p "$BLOBFUSE_MIRROR_PATH/pool"
-    echo "ln -s $BLOBFUSE_MIRROR_PATH $APTLY_PATH"
-    ln -s $BLOBFUSE_MIRROR_PATH $APTLY_PATH
+    echo "ln -s $BLOBFUSE_MIRROR_PATH $STORAGE_DATA_PATH"
+    ln -s $BLOBFUSE_APTLY_DATA $STORAGE_DATA_PATH
     if [ "$EnableNFS" != "y" ]; then
       echo "Mount Aptly pool, EnableNFS=$EnableNFS"
       echo "ln -s $BLOBFUSE_MIRROR_PATH/pool $APTLY_POOL_PATH"
