--- a/azure-pipelines/templates/debian-mirror-init-storage.yml
+++ b/azure-pipelines/templates/debian-mirror-init-storage.yml
@@ -59,21 +59,20 @@ steps:
     BLOBFUSE_APTLY_DATA=/blobfuse-${StorageAccount}-data
     azure-pipelines/scripts/mirror/mount-storage.sh "$BLOBFUSE_APTLY_DATA" "$StorageAccount" "data" "$StorageAccountSasToken" "/data/blobfuse-${StorageAccount}-data"
 
-    if [ "$MIRROR_NAME" == "none" ]; then
-      echo "Skip to make soft link" 
-      exit 0
-    fi
-
     mkdir -p "$WORKSPACE"
     STORAGE_DATA_PATH=$WORKSPACE/_storage_data
     APTLY_POOL_PATH=$WORKSPACE/pool
     BLOBFUSE_MIRROR_APTLY=$BLOBFUSE_APTLY_DATA/aptly
     BLOBFUSE_MIRROR_PATH=$BLOBFUSE_APTLY_DATA/aptly/$MIRROR_NAME
-    [ "$EnableNFS" == "y" ] && BLOBFUSE_MIRROR_PATH=$BLOBFUSE_APTLY_DATA/$MIRROR_NAME/nfs
     echo "STORAGE_DATA_PATH=$STORAGE_DATA_PATH, APTLY_POOL_PATH=$APTLY_POOL_PATH"
     mkdir -p "$BLOBFUSE_MIRROR_PATH/pool"
-    echo "ln -s $BLOBFUSE_MIRROR_PATH $STORAGE_DATA_PATH"
+    echo "ln -s $BLOBFUSE_APTLY_DATA $STORAGE_DATA_PATH"
     ln -s $BLOBFUSE_APTLY_DATA $STORAGE_DATA_PATH
+
+    if [ "$MIRROR_NAME" == "none" ]; then
+      echo "Skip to make soft link"
+      exit 0
+    fi
     if [ "$EnableNFS" != "y" ]; then
       echo "Mount Aptly pool, EnableNFS=$EnableNFS"
       echo "ln -s $BLOBFUSE_MIRROR_PATH/pool $APTLY_POOL_PATH"
